chore: changed java version to 11